SIM: experimenting with Vivado and ModelSim simulators, there were some issues on my OS, so I could not run them properly

--- a/sim/Makefile.vivado_sim
+++ b/sim/Makefile.vivado_sim
@@ -3,16 +3,20 @@ PATH_RTL=../hdl
 PATH_TBN=../hdl/tbn
 
 # secure IP
-#LIB=$(PATH_LIB)/glbl.v
+# empty
 
 # TODO: VIP for AXI4 memory mapped interfaces, and ZYNQ PS
 
 # RTL files
-RTL_PKG =$(wildcard $(PATH_RTL)/*_pkg.sv)
-RTL_SRC =$(wildcard $(PATH_RTL)/*.sv)
-RTL_SRC+=$(wildcard $(PATH_RTL)/*.v)
-RTL_DIF =$(filter-out $(RTL_PKG),$(RTL_SRC))
-RTL = $(RTL_PKG) $(RTL_DIF)
+RTL  = $(PATH_RTL)/sockit_spi_cdc.sv
+RTL += $(PATH_RTL)/sockit_spi_dma.sv
+RTL += $(PATH_RTL)/sockit_spi_reg.sv
+RTL += $(PATH_RTL)/sockit_spi_rpi.sv
+RTL += $(PATH_RTL)/sockit_spi_rpo.sv
+RTL += $(PATH_RTL)/sockit_spi_ser.sv
+RTL += $(PATH_RTL)/sockit_spi_xip.sv
+RTL += $(PATH_RTL)/sockit_spi.sv
+
 
 # testbench files
 TBN_PKG =$(wildcard $(PATH_TBN)/*_pkg.sv)
@@ -37,13 +41,14 @@ OPT_COMPILE_INC+=--include $(XILINX_VIVADO)/data/ip/xilinx/xil_common_vip_v1_0/h
 OPT_COMPILE_INC+=--include $(XILINX_VIVADO)/data/ip/xilinx/axi4stream_vip_v1_0/hdl
 OPT_COMPILE_INC+=--include $(XILINX_VIVADO)/data/ip/xilinx/processing_system7_vip_v1_0/hdl/
 
-OPT_COMPILE = $(OPT_COMPILE_LIB) $(OPT_COMPILE_INC)
+#OPT_COMPILE = $(OPT_COMPILE_LIB) $(OPT_COMPILE_INC)
 
 #xsim.dir/xil_defaultlib/glbl.sdb:
 
 compile: $(SRC)
 #	$(foreach file,$(SRC),xvlog                             --sv --work xil_defaultlib $(file);)
-	$(foreach file,$(SRC),xvlog -m64 --relax $(OPT_COMPILE) --sv --work xil_defaultlib $(file);)
+#	$(foreach file,$(SRC),xvlog -m64 --relax $(OPT_COMPILE) --sv --work xil_defaultlib $(file);)
+	$(foreach file,$(SRC),xvlog -m64 --relax $(OPT_COMPILE) --sv --work work $(file);)
 
 
 OPT_ELABORATE_LIB =-L axis_infrastructure_v1_1_0
@@ -56,12 +61,13 @@ OPT_ELABORATE_LIB+=-L unimacro_ver
 OPT_ELABORATE_LIB+=-L secureip
 OPT_ELABORATE_LIB+=-L xpm
 
-OPT_ELABORATE = $(OPT_ELABORATE_LIB)
+#OPT_ELABORATE = $(OPT_ELABORATE_LIB)
 
 elaborate: compile
 #%_tb: elaborate
 	xelab -m64 --debug typical --relax $(OPT_ELABORATE) \
-	--snapshot spi_behav spi_tb xil_defaultlib.glbl -log elaborate.log
+	--snapshot spi_behav spi_tb -log elaborate.log
+#	--snapshot spi_behav spi_tb xil_defaultlib.glbl -log elaborate.log
 #	--snapshot axi4stream_vip_0_exdes_tb_behav xil_defaultlib.axi4stream_vip_0_exdes_tb xil_defaultlib.glbl -log elaborate.log
 #	--snapshot $@ xil_defaultlib.$@
 
