SIM: simulation script update

--- a/sim/Makefile.vivado_sim
+++ b/sim/Makefile.vivado_sim
@@ -11,7 +11,11 @@ PATH_TBN=../hdl/tbn
 RTL  = $(PATH_RTL)/if/axi4_pkg.sv
 RTL += $(PATH_RTL)/if/axi4_if.sv
 RTL += $(PATH_RTL)/if/axi4_lite_if.sv
+RTL += $(PATH_RTL)/if/spi_if.sv
+RTL += $(PATH_RTL)/sockit_spi_if.sv
 RTL += $(PATH_RTL)/sockit_spi_pkg.sv
+RTL += $(PATH_RTL)/sockit_spi_mux.sv
+RTL += $(PATH_RTL)/sockit_spi_frk.sv
 RTL += $(PATH_RTL)/sockit_spi_cdc.sv
 RTL += $(PATH_RTL)/sockit_spi_dma.sv
 RTL += $(PATH_RTL)/sockit_spi_reg.sv
